Use String as representation of a buffer instead of Cell